tests/should_fail/syntax_empty_list_no_type.nv
module main

// SHOULD FAIL: empty list without type annotation
// parser: "List must have a type, use `[]: type`"
let xs = []
println(xs)
